fixed padding an margin on mobile for main content

--- a/style.css
+++ b/style.css
@@ -63,6 +63,10 @@ li {
 #floatLeft{
     float: left;
 }
+.main{
+    padding: 0px;
+    margin-left: 0px;
+}
 
 }
 
